# FastApi-project

./: .coverage  .env  .gitignore  Dockerfile  README.md  database.py  debuging.sh  docker-compose.yml  init_db.sh  main.py  models.py  pyproject.toml  test_functions.py  test_main.py  todo.txt  token_func.py
app/: database.py  main.py  models.py  token_func.py
docker-entrypoint-initdb.d/: init_db.sh
tests/: test.py  test_functions.py
